Adding upto regional diversity of inclusivity content

--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -1,10 +1,174 @@
 {% extends "my-layout.html" %}
   
 {% block sidebar_content %}
+<ul class="nav nav-pills flex-column mb-auto">
+              <li class="nav-item">
+                <a href="#section1" class="nav-link link-dark" aria-current="page">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+                  Overview
+                </a>
+              </li>
+              <li>
+                <a href="#section2" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+                  Our Team
+                </a>
+              </li>
+              <li>
+                <a href="#section3" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+                  Crossing Language Barriers                </a>
+              </li>
+              <li>
+                <a href="#section4" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
+                  
+                </a>
+              </li>
+              <li>
+                <a href="#section5" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  Interacting with Specially-Abled Individuals
+                </a>
+              </li>
+
+              <li>
+                <a href="#section6" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  Regional Diversity
+                </a>
+              </li>
+
+              <li>
+                <a href="#section7" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                 Interconnectivity between Science and Art
+                </a>
+              </li>
+
+            </ul>
+
 {% endblock %}
 
 {% block heading %}Inclusivity{% endblock %}
 
 {% block page_content %}
+    <div class="content">
+                <div class="m-5 mb-16">
+                    <p class="mt-5 MAIN-STUFF" id="section1">Overview</p>
+                    <p class="mt-5 sub-stuff"><i>“Inclusive growth should not be a mere slogan but a fundamental driving force for sustainable development.”</i><br>
+- Mr. Pranab Mukherjee, Former President of India.<br><br> </p>
+                <figure>
+                    <img class="img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
+                    <figcaption style="text-align:center">This mind map depicts how we’ve aimed to make our project inclusive to different communities</figcaption>
+                    </figure>
+
+             <p class="mt-5 sub-stuff"> Our team has attempted to explore what groups are <b>underrepresented</b> in science. Particularly in the country that our team is from, India. Through our exploration, we have identified multiple groups traditionally underrepresented in science due to social stigma and financial barriers that prevent them from crossing the threshold and bridging the gap to access scientific avenues.<br><br>
+
+In developed countries, accessibility is used excessively, and efforts are made cost-effectively. However, in India, accessibility is not financially viable for most specially-abled individuals. The other groups recognized as excluded from scientific research are specially-abled individuals. We developed a skit and used the art of storytelling to gain their opinion on fields like synthetic biology.<br>
+In a country as diverse and rich with culture as India, language barriers are bound to prevent the latest scientific developments from reaching all communities. We addressed this through translations and involving stakeholders who spoke different languages. We also attempted to overcome regional barriers preventing people from accessing scientific information by leveraging online platforms like social media and blogs.<br><br>
+
+Our documentation is our primary method of educating the public about our project so that they can access all the finer details of our project. Hence, ensuring that the wiki was accessible by making changes to accommodate color-blind and dyslexic people was also a priority. Following the same train of thought, we have made an audio description of our promotion video accessible to visually abled individuals.<br><br>
+
+We also used a Bio-Art competition and a music composition to ensure that we taught science in a more accessible way to those with learning disabilities as well.<br> </p>
+
+                <p class="mt-5 MAIN-STUFF" id="section2">Our Team</p>
+
+            <p class="mt-5 sub-stuff"> Our team members come from different states of India, adding great diversity to our team. Being inclusive of the community has been one of our primary goals from the very beginning of the project. During the initial ideation of the project, we put in considerable effort to understand the preferred pronouns of our fellow teammates. The diversity that we bring to the table with various cultures and regions has been something of great help to us, providing us a chance to learn more about the others.<br> </p>
+
+            <img class="img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
+
+            <p class="mt-5 MAIN-STUFF" id="section2">Crossing Language Barriers</p>
+
+            <p class="mt-5 sub-stuff"> India has 22 official languages with hundreds of regional dialects with its own layers of dynamics in cultural and social diversity. Access to scientific information should not be restricted by these language barriers. Regional languages bridge these gaps, ensuring individuals from diverse linguistic backgrounds can access and contribute to scientific knowledge. We can empower communities to understand and apply scientific findings to their contexts, fostering sustainable practices and development.<br> </p>
+
+            <ul>
+                <li>We interacted with local stakeholders in various languages like Hindi, Tamil, Bengali, Kannada and Odia to explain our project idea to them and get their genuine opinions on our implementation strategy.</li>
+                <li>We also conducted education programs in local languages like Tamil and Kannada to increase engagement among various groups. Our education visits were not restricted to schools in Manipal; we have taught students in schools across many states of India</li>
+                <li>We have gone a step further and collaborated with India Literacy Project. This non-profit organization aims to enable children in government schools to acquire grade-appropriate skills and career opportunities. We translated our educational content on "Chemicals in Daily Use Products" into a regional language, Kannada, which will be integrated into their syllabus and be taught at over 14,102 schools across India through the India Literacy project as optional additional content; this gave us a chance to spread awareness about the presence of harmful chemicals in personal care products among the local community.</li>
+            </ul>
+            </p>
+
+            <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/dkshippocampus.jpeg" class="d-block w-100" >
+                    </div>
+                    <div class="carousel-item">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/govtschoolmadurai.jpeg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/srikrishnamandir.jpeg" class="d-block w-100" >
+                    </div>
+                    <div class="carousel-item">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/meeting-with-mr-tarini-prasad-barik-nature-conservancy-consultancy-pvt-ltd-bhubaneswar-odisha-1.png" class="d-block w-100" >
+                    </div>
+                    <div class="carousel-item">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/meeting-with-mr-s-k-swain-water-treatment-industry-1.png" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/boardhighschool.jpeg" class="d-block w-100" >
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls111" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+            <p class="mt-5 MAIN-STUFF"> Interacting with Specially-Abled Individuals </p> 
+
+            <p class="mt-5 sub-stuff"> Differently abled people and people with neurodivergence are often left out of scientific education for various reasons; this often means that advancements in science and technology are often only accessible to abled people, and persons with disabilities often find it challenging to integrate into and contribute to STEM communities. We attempted to reach out to as many sections of society as possible, tailoring our approach to better fit certain groups.<br><br> </p>
+
+            <ul>
+                <li>In order to make sure that science reaches the specially-abled too, we visited “ASARE”- a center for autistic and learning disorders. There, we engaged in a fun coloring activity and performed a skit in a regional language, Kannada to convey our project to them in simple terms. We used graphical illustrations of soap, a toxic chemical (triclocarban) and a good bacteria to explain how our genetically modified bacteria would degrade the harmful chemicals present in daily use products like handwash, detergents and several others. The people loved all the activities and interacted with us. We also had a music and dance performance by a few of our team members to draw their attention and keep them involved. Followed by this, they even performed a dance out of their happiness for us and greeted us with “thank you” in the sweetest ways possible.  <br><br> </li>
+            </ul>
+
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare1.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare2.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare3.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare4.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare5.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare6.jpeg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+
+  
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<ul>
+      <li>Much education and outreach rely primarily on visual aids; this makes it difficult for those with visual impairment to understand or contribute to science adequately. We decided to use music to communicate scientific concepts so that it would be accessible to those with visual disabilities while appealing to those with non-scientific backgrounds. We collaborated with musicians to create a composition using the amino acids comprising our protein tccA amidase as a basis for the notes in the sequence; this also allowed us to communicate biological concepts such as codons, protein construction, and modification using musical analogies that most people understand. It was an interactive approach to spark curiosity about science within the minds of the non-scientific community.<br><br></li>
+    </ul>
+
+    <p class="mt-5 MAIN-STUFF"> Regional Diversity </p>
+
+    <p class="mt-5 sub-stuff"> Our team comprises students from different regions of India, and our interaction with people made us realize the importance of reaching out to various regional populations. Our goal is to make science accessible to all. We used media as a means to communicate with a wider variety of audience ranging from the youth to senior citizens with no barriers created by the community. </p>
+                </div>
+    </div>
 {% endblock %}
 
