Update description.html removed <ul> from 179

--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -117,7 +117,7 @@
     <p class="mt-5 sub-stuff">Pertaining to Indian waters, 692 ng/g w/w TCC was accumulated in fish from the Kaveri
       River, India [5]. Victims and their symptoms included:<br><br>
       <b>Zebrafish larvae</b>: Affected nervous system & skeletal muscle development, metabolism along with hormonal
-      conditions.
+      conditions. <br><br>
       <b>Fathead minnows</b>: Reduced mobility & feeding, aggression, fecundity and even death. <br><br>
       <b>Freshwater mud snails, planktonic crustaceans, and amphibians</b>: Reproductive issues rooted from
       endocrine-disruption.
@@ -126,17 +126,17 @@
     <p class="mt-5 MAIN-STUFF">Damage to Agro Industry</p>
 
     <p class="mt-5 sub-stuff"> In food crops cultured in <b>contaminated hydroponic media</b>, after four weeks of
-      exposure, roots accumulated 86–1,350 mg kg−1 of antimicrobials and shoots had accumulated 0.33-5.35 mg kg−1 of
+      exposure, roots accumulated 86–1,350 mg kg<sup>−1</sup> of antimicrobials and shoots had accumulated 0.33-5.35 mg kg<sup>−1</sup> of
       antimicrobials, including triclocarban [6]. <br><br>
 
       The uptake and accumulation of TCC due to the use of <b>contaminated biosolids as fertilisers</b> has been
-      detected in several food crops —carrots, green peppers, tomatoes, and cucumbers—and has been proven to hinder
+      detected in several food crops—carrots, green peppers, tomatoes, and cucumbers—and has been proven to hinder
       proper metabolism in the crops [2]. <br><br>
 
       Accumulation of TCC was observed in soil and soil-dwelling organisms. Moreover, microbial communities and their
       metabolic activities like nitrification and denitrification were heavily affected. As an antimicrobial, it may
       participate in <b>antibiotic resistance bacteria selection</b> and may induce antibiotic-resistant genes in these
-      bacteria. [2] </p>
+      bacteria [2]. </p>
 
     <p class="mt-5 MAIN-STUFF">Existing Methods</p>
 
@@ -152,7 +152,7 @@
       generally more <b>expensive</b>, while ozone-based techniques have been proven to be <b>less effective</b>.
       <br><br>
 
-      <b>It was found that most methods currently utilised by WWTPs in India aren’t adequate for removing TCC [2].
+      <b>It was found that most methods currently utilised by WWTPs in India aren’t adequate for removing TCC [2].</b>
     </p>
 
     <p class="mt-5 MAIN-STUFF">Biodegradation of TCC</p>
@@ -169,14 +169,14 @@
     <p class="mt-5 sub-stuff"> Once degraded by existing methods, toxic chloroaniline byproducts accumulate in the
       environment. According to studies conducted by the World Health Organisation and Centers for Disease Control and
       Prevention, 4-chloroaniline and 3,4-dichloroaniline act as <b>carcinogens</b> and cause
-      <b>methemoglobinemia</b>—which is a condition characterised by an abnormal form of haemoglobin in the blood
+      <b>methemoglobinemia</b>-which is a condition characterised by an abnormal form of haemoglobin in the blood
       leading to <b>cyanosis and hypoxia</b>.
     </p>
 
     <p class="mt-5 MAIN-STUFF">Our Solution</p>
 
     <p class="mt-5 sub-stuff">
-    <ul>
+    
       <li>Some bacteria, through other degradation pathways, can degrade the initial byproducts 3,4-DCA and 4-CA to
         Krebs’ cycle intermediates which are then utilised by the bacteria.</li>
       <li><b>Our proposed solution to degrade TCC into non-toxic final products was to insert the novel amidase gene
@@ -186,7 +186,7 @@
       <li>Our novel amidase gene acts along with a cluster of native genes that degrade the compound till
         cis,cis-muconic acid which is then further taken into the Krebs' cycle.
       </li>
-    </ul>
+  
 
     <figure>
       <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-4.jpg" class="img-fluid">
