Added image project-parts.html

--- a/wiki/pages/project-parts.html
+++ b/wiki/pages/project-parts.html
@@ -44,7 +44,7 @@
                 <td>1452</td>
             </tr>
         </table>
-
+ <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/part-image.png" class="img-fluid rounded mx-auto d-block mt-4">
         </p>
     </div>
 </div>
