--- a/wiki/my-navbar.html
+++ b/wiki/my-navbar.html
@@ -67,6 +67,11 @@
           <a class="dropdown-item" href="{{ url_for('pages', page='awards-education') }}">Education</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="dropdown-item" href="{{ url_for('pages', page='safety') }}">
+          Safety
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
