--- a/wiki/my-menu.html
+++ b/wiki/my-menu.html
@@ -45,6 +45,11 @@
           <a class="dropdown-item" href="{{ url_for('pages', page='inclusivity') }}">Inclusivity</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="dropdown-item" href="{{ url_for('pages', page='safety') }}">
+          Safety
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
