--- a/wiki/my-menu.html
+++ b/wiki/my-menu.html
@@ -46,7 +46,8 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="dropdown-item" href="{{ url_for('pages', page='safety') }}">
+        <a class="nav-link dropdown-toggle" href="{{ url_for('pages', page='safety')}}" id="navbarDropdownMenuLink" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
           Safety
         </a>
       </li>
