--- a/wiki/my-menu.html
+++ b/wiki/my-menu.html
@@ -46,8 +46,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="{{ url_for('pages', page='safety')}}" id="navbarDropdownMenuLink" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link" href="{{ url_for('pages', page='safety')}}">
           Safety
         </a>
       </li>
