--- a/wiki/pages/project-design.html
+++ b/wiki/pages/project-design.html
@@ -124,10 +124,10 @@
       <p class="mt-5 MAIN-STUFF"> Choice of Chassis </p>
       <p class="mt-5 sub-stuff" id="section3"> There exist some bacteria that possess natural pathways capable of
         degrading the toxic byproducts. Through extensive literature survey, we narrowed down our possible chassis
-        options to three species capable of degrading the byproducts -<i>Acinetobacter baylyi </i>[3], <i> Pseudomonas
-          putida </i>[4] [5]and <i> Pseudomonas fluorescens </i>[6].<br>
+        options to three species capable of degrading the byproducts-<i>Acinetobacter baylyi </i>[3], <i> Pseudomonas
+          putida </i>[4][5]and <i> Pseudomonas fluorescens </i>[6].<br><br>
         All three of these organisms were equally suited for our chassis, therefore, our first decision to make was this
-        choice. <br>
+        choice. 
         Besides the inherent ability to break down the chloroaniline byproducts, other major criteria we considered
         included:<br>
       <ul>
@@ -138,13 +138,13 @@
 
       We then proceeded to study the growth of these bacteria at conditions similar to WWTPs in India. <br>
       To learn more about this, check out the <a href="https://2023.igem.wiki/mit-mahe/experiments"
-        target="_blank">experiments page</a></p>
+        target="_blank">experiments page.</a></p>
 
       <p class="mt-5 MAIN-STUFF"> Parts </p>
       <p class="mt-5 sub-stuff" id="section4"> <b> AMIDASE TccA </b> <br>
-        The purpose of the amidase protein(Part number:<b>BBa_K4641000</b>) in the chassis is to breakdown Triclocarban
+        The purpose of the amidase protein (Part number: <b>BBa_K4641000</b>) in the chassis is to breakdown Triclocarban
         (3,4,4′-Trichlorocarbanilide) into 3,4-dichloroaniline and 4-chloroaniline. Our target protein is naturally
-        constitutively expressed in <i>Ochrobactrum sp. TCC-2</i> [2] </p>
+        constitutively expressed in <i>Ochrobactrum sp. TCC-2</i> [2]. </p>
 
       <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/part-image.png" class="img-fluid">
       <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/breakdown-image.jpeg" class="img-fluid">
@@ -157,8 +157,8 @@
       <p class="mt-5 MAIN-STUFF"> Plasmid Design </p>
       <p class="mt-5 sub-stuff" id="section5"> The CarbanEl system is based on a Gibson assembly cloning system. The
         gene fragment is designed and synthesized such that the overhangs are already added. For the characterisation
-        and study of the enzyme activity, we expressed the amidase gene in <i> E. coli BL21 </i>. However, our final
-        intended chassis is <i>Acinetobacter baylyi</i>
+        and study of the enzyme activity, we expressed the amidase gene in <i> E. coli BL21</i>. However, our final
+        intended chassis is <i>Acinetobacter baylyi</i>. 
         The plasmid designed is as below:
       </p>
 
@@ -167,24 +167,24 @@
 
       <p class="mt-5 MAIN-STUFF"> Implementation </p>
 
-      <p class="mt-5 sub-stuff" id="section6"> On the basis of multiple human practice interactions, our proposed
+      <p class="mt-5 sub-stuff" id="section6"> Building onto multiple human practice interactions, our proposed
         implementation was a sludge based bioreactor. This is because a major portion of the TCC as well as other toxic
         compounds get adsorbed onto the sludge. The methods of disposal of sludge include disposal on land, dumping into
-        water bodies, incineration, digestion followed by drying, drying on drying bed and disposal in landfills[7].
-        This allows the adsorbed TCC to enter the environment. We propose the addition of a cheap packed bed bioreactor
+        water bodies, incineration, digestion followed by drying, drying on drying bed and disposal in landfills [7].
+        This allows the adsorbed TCC to enter the environment. <br><br> We propose the addition of a cheap packed bed bioreactor
         on a lab scale and a fluidised bed with a toggling mechanism on an industrial scale. This bioreactor will be
         implemented immediately after the sludge leaves the aeration tank, prior to the dewatering process. Our modified
         bacteria will be immobilized on packing material made from locally available rice husk derived biochar. These
-        pellets (in the shape of a Raschig ring) will constitute the packing material. <br>
+        pellets (in the shape of a Raschig ring) will constitute the packing material. <br><br>
         To learn more about the model, check out our <a href="https://2023.igem.wiki/mit-mahe/model"
-          target="_blank">model page</a>
+          target="_blank">model page</a><br>
         To learn more about how we plan to implement this, check out our <a
           href="https://2023.igem.wiki/mit-mahe/project-implementation" target="_blank">implementation page</a></p>
 
       <p class="mt-5 MAIN-STUFF"> Sensor </p>
       <p class="mt-5 sub-stuff" id="section7"> TCC is a micropollutant, present in parts per billion (ppb) levels, with
         a major effect. Hence, it becomes vital to be able to detect the levels of TCC present in water through a
-        sensitive but cost effective sensor model. <br>
+        sensitive yet cost effective sensor model. <br><br>
         We plan to develop a laser based sensor coupled with a photodiode setup. This will allow us to detect TCC levels
         accurately in water bodies or even in the WWTP. <br>
         To learn more about the sensor, check out our <a href="https://2023.igem.wiki/mit-mahe/hardware"
@@ -196,7 +196,7 @@
         involved visiting wastewater treatment plants, speaking to stakeholders, and discussing with a wide range of age
         groups and backgrounds to see how well our project was accepted. <br>
         The importance of feedback loops, and integrating the inputs from experts and stakeholders alike has been
-        highlighted in our work done by the Human practices team. <br>
+        highlighted in our work done by the Human practices team. <br><br>
         To learn more about our human practices, check out our <a href="https://2023.igem.wiki/mit-mahe/human-practices"
           target="_blank"> Human Practices page
         </a></p>
@@ -205,15 +205,15 @@
       <p class="mt-5 sub-stuff" id="section9"> As we are working with genetically modified bacteria, biocontainment and
         safety is of utmost importance. The cells will be immobilized onto our packing material, biochar, by
         chemisorption techniques. This immobilization will prevent the escape of bacteria from the bioreactor into the
-        environment.<br>
+        environment.<br><br>
         Further, we plan to implement a kill switch to ensure that the bacteria cannot survive outside of the
-        bioreactor.
+        bioreactor. <br><br>
         To learn more about our safety practices, check out our <a href="https://2023.igem.wiki/mit-mahe/safety"
-          target="_blank"> safety page </a>
+          target="_blank"> safety page. </a>
         <br>
 
         To learn more about our kill switch, <a href="https://2023.igem.wiki/mit-mahe/project-implementation"
-          target="_blank"> click here </a>
+          target="_blank"> click here. </a>
       </p>
 
       <p class="mt-5 MAIN-STUFF"> References </p>
@@ -224,7 +224,8 @@
           https://doi.org/10.1016/0043-1354(86)90054-0</a><br>
         [2]Yun H, Liang B, Qiu J, Zhang L, Zhao Y, Jiang J, Wang A. Functional Characterization of a Novel Amidase
         Involved in Biotransformation of Triclocarban and its Dehalogenated Congeners in Ochrobactrum sp. TCC-2. Environ
-        Sci Technol. 2017 Jan 3;51(1):291-300. doi: 10.1021/acs.est.6b04885. Epub 2016 Dec 14. PMID: 27966913.<br>
+        Sci Technol. 2017 Jan 3;51(1):291-300.  <a
+          href="https://doi.org/10.1021/acs.est.6b04885" target="_blank">https://doi.org/10.1021/acs.est.6b04885</a><br>
         [3]Hongsawat, Parnuch, and Alisa S. Vangnai. “Biodegradation Pathways of Chloroanilines by Acinetobacter Baylyi
         Strain GFJ2.” Journal of Hazardous Materials, vol. 186, no. 2–3, Elsevier BV, Feb. 2011, pp. 1300–07. <a
           href="https://doi.org/10.1016/j.jhazmat.2010.12.002"
