--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -128,7 +128,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
                 <li>In order to make sure that science reaches the specially-abled too, we visited “ASARE”- a center for autistic and learning disorders. There, we engaged in a fun coloring activity and performed a skit in a regional language, Kannada to convey our project to them in simple terms. We used graphical illustrations of soap, a toxic chemical (triclocarban) and a good bacteria to explain how our genetically modified bacteria would degrade the harmful chemicals present in daily use products like handwash, detergents and several others. The people loved all the activities and interacted with us. We also had a music and dance performance by a few of our team members to draw their attention and keep them involved. Followed by this, they even performed a dance out of their happiness for us and greeted us with “thank you” in the sweetest ways possible.  <br><br> </li>
             </ul>
 
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleControls" class="carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare1.jpeg" class="d-block w-100" alt="...">
@@ -160,15 +160,88 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
+<p class="mt-5 sub-stuff">
 <ul>
       <li>Much education and outreach rely primarily on visual aids; this makes it difficult for those with visual impairment to understand or contribute to science adequately. We decided to use music to communicate scientific concepts so that it would be accessible to those with visual disabilities while appealing to those with non-scientific backgrounds. We collaborated with musicians to create a composition using the amino acids comprising our protein tccA amidase as a basis for the notes in the sequence; this also allowed us to communicate biological concepts such as codons, protein construction, and modification using musical analogies that most people understand. It was an interactive approach to spark curiosity about science within the minds of the non-scientific community.<br><br></li>
     </ul>
-
+</p>
     <p class="mt-5 MAIN-STUFF"> Regional Diversity </p>
 
     <p class="mt-5 sub-stuff"> Our team comprises students from different regions of India, and our interaction with people made us realize the importance of reaching out to various regional populations. Our goal is to make science accessible to all. We used media as a means to communicate with a wider variety of audience ranging from the youth to senior citizens with no barriers created by the community. </p>
-                </div>
+<p class="mt-5 sub-stuff">
+    <ul>
+      <li>We created a series of SynBio comic strips to ensure that the world of synthetic biology reaches a considerable audience. </li>
+    </ul>
+</p>
+    <div class="ratio ratio-16x9">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbiocomicstrip.pdf" allowfullscreen></iframe>
+    </div>
+<p class="mt-5 sub-stuff">
+      <ul>
+      <li>We also posted a “Series on Synthetic Biology Applications” which had three episodes highlighting the latest unique advancements in synthetic biology to spark curiosity in the minds of our fellow social media users.</li>
+      </ul>
+</p>
+      <img class="mt-5 img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbioseries1jpg.jpg">
+<p class="mt-5 sub-stuff">
+      <ul>
+      <li>Not only this, we also had a set of five articles published on Medium relating to various aspects of synthetic biology. It would help broaden the horizons of the general public around us and emphasize how synthetic biology is not just limited to GMOs, but also has applications in numerous fields.</li>
+      </ul>
+</p>
+      <div id="carouselExampleControls2" class="carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle1.jpeg" class="d-block w-100" >
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle2.jpeg" class="d-block w-100" >
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle3.jpeg" class="d-block w-100" >
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticl4.jpeg" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle5.jpeg" class="d-block w-100" >
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<p class="sub-stuff" style="text-align:center"> SynBio article series published on Medium </p>
+
+<p class="mt-5 sub-stuff">
+<ul>
+  <li>We also conducted a “Bioremediation Conclave” in collaboration with iGEM IIT-Delhi in order to emphasize on the applications of synthetic biology in bioremediation in front of  a wider audience. Around 50 participants attended the conclave from all over the globe and from various iGEM teams participating under the bioremediation track. It was an overall learning experience for all the attendees, adding onto their knowledge and sparking new ideas.</li>
+</ul>
+</p>
+
+<figure>
+  <img class="mt-5 img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/conclave-1.png">
+  <figcaption style="text-align:center"> 3-Day Bioremediation conclave held in collaboration with team iGEM IIT-Delhi </figcaption>
+  </figure>
+
+<p class="mt-5 MAIN-STUFF">Interconnectivity between Science and Art</p>
+<p class="mt-5 sub-stuff"> Science, like any other field, involves creativity and innovation. Science is incorporated everywhere, be it music or artwork. In an attempt to interact with the non-scientific community and bring out the creative aspects of synthetic biology, our team put in substantial efforts.<br> </p>
+
+<p class="mt-5 sub-stuff">
+<ul>
+  <li>We curated a music composition from our TccA amidase enzyme sequence by converting into notes using a software. We put together a video that played this composition in the background while showing our protein structure with triclocarban (TCC) docked in it. It further explained the mechanism behind the making of this music and helped provide an understanding about amino acids and codons</li>
+  <li>We hosted a “BioArt Competition”, in collaboration with IIT-Delhi, based on the applications of synthetic biology and solving real-world problems using traditional, indigenous and folk art styles. This helped encourage our rich heritage and brought out the diversity among the nations. The participants showcased their bioart while also describing the thoughts behind their design</li>
+</ul>
+</p>
+<figure>
+<img class="mt-5 img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/bioart-competition.jpeg">
+<figcaption style="text-align:center"> Insert image, Caption: BioArt Competition held in collaboration with team iGEM IIT-Delhi </figcaption>
+
+</figure>
+        </div>
     </div>
 {% endblock %}
 
