Update safety.html removed line-height: 50px; from line 50, 84, 113, 119, 127, 177

--- a/wiki/pages/safety.html
+++ b/wiki/pages/safety.html
@@ -41,13 +41,13 @@
 {% block page_content %}
 <div class="content">
         <div class="m-5 mb-16">
-            <p class="mt-5 MAIN-STUFF" id="section1">1.Prologue<br></p>
+            <p class="mt-5 MAIN-STUFF" id="section1">1. Prologue<br></p>
             <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
               The team iGEM MIT-MAHE project gives topmost priority to safety and security, focusing on safeguarding laboratory members, experimentation, and the environment. Our institute's unwavering support has enabled us to fulfil our fundamental responsibility toward biosafety. We have meticulously planned our experiments and upheld proper work ethics in the laboratory to ensure that no harm was inflicted on nature or ourselves. In this regard, we have discussed our planned experiments in detail with our principal investigator, and were performed only upon her approval. This approach ensured transparency and accountability in our efforts to maintain the highest standards of safety and security.
               </p>
             <img src="https://static.igem.wiki/teams/4641/wiki/safety/safety-flow-chart.png" class="img-fluid rounded mx-auto d-block mt-4">
-            <p class="mt-5 MAIN-STUFF" id="section2">2.Lab Safety<br></p>
-            <p style="font-family: 'Poppins', sans-serif; font-size: 20px;line-height: 50px;">1.The MIT-MAHE team's wet lab members conduct their experiments in the Department of Biotechnology's Project Lab, a lab/workspace designated with Biosafety Level 2 (BSL-2). Our laboratory and work practices within the lab adhere to the guidelines for biosafety and biosecurity in India as well as the guidelines provided by the Centre of Bioethics, MAHE.<br><br> 
+            <p class="mt-5 MAIN-STUFF" id="section2">2. Lab Safety<br></p>
+            <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">1.The MIT-MAHE team's wet lab members conduct their experiments in the Department of Biotechnology's Project Lab, a lab/workspace designated with Biosafety Level 2 (BSL-2). Our laboratory and work practices within the lab adhere to the guidelines for biosafety and biosecurity in India as well as the guidelines provided by the Centre of Bioethics, MAHE.<br><br> 
               2.All members of the wet lab subsystem of our team have received extensive training in safe lab practices from our PI, Dr. Ritu Raval and our advisors before they began working in the lab.<br> <br> 
               ->We were advised on the risk assessment of the reagents in use, proper identification, management, and safe disposal of biological and chemical hazardous waste and lab consumables as well as the necessary precautions to be taken while working with biological materials.<br> 
               ->We were also briefed on the working mechanisms of all the equipment and machinery available in the lab and on how to appropriately and safely use them to conduct experiments. They were advised on appropriately using equipment such as the centrifuge, UV-visible spectrophotometer, etc. as well as safe handling of the autoclave and decontamination units.<br>
@@ -81,7 +81,7 @@
                     All the lab members understand the risks involved with these chemicals and have followed all the necessary safety measures while working with them.</p>
                 </div>
               </div>
-              <p style="font-family: 'Poppins', sans-serif; font-size: 20px;line-height: 50px;">
+              <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
               <button class="modal-button" onclick="openModal('modal3')">Sodium Hydroxide</button>
               <button class="modal-button" onclick="openModal('modal4')">Antibiotics</button>
               <div id="modal3" class="modal">
@@ -102,7 +102,7 @@
              <br>
               </p>
   <br><br>
-            <p class="mt-3 MAIN-STUFF" id="section3">Project specific safety<br></p>
+            <p class="mt-3 MAIN-STUFF" id="section3">3. Project Specific Safety<br></p>
             <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">1.As our team is working with Triclocarban and its subsequent breakdown products, 4-chloroaniline and 3,4-dichloroaniline which are hazardous in nature and possible carcinogens, we took extra precautions while working with them by wearing double nitrile gloves, N95 masks, safety goggles and lab coats.<br><br>
               2.For decontamination and disposal of Triclocarban and other hazardous compounds, we have stored all the equipment used, i.e., pipette tips, tissue paper as well as the solutions containing these chemicals separately to prevent the risk of spillage and exposure to untrained individuals. This will be then sent to Re Sustainability Limited (RE), a KKR-backed company, which is one of Asia's leading providers of comprehensive environment management services for disposal.<br><br>
               3.The organisms and parts that we are working with are in Risk Group 1. They are non-pathogenic and non-spore forming and all our work is covered by the White List, hence, we aren't conducting any activities against the guidelines provided by the competition.<br><br>
@@ -110,13 +110,13 @@
               5.All the equipment and glassware that we use that have come in contact with the cultures that we're working with are routinely autoclaved (decontamination) and treated with bleach before disposal.<br><br>
               
               <b><h3> Meeting with Lynn Ferris, Lab Manager at UNSW, Australia : Sept 1, 2023</h3></b><br><br>
-              <p style="font-family: 'Poppins', sans-serif; font-size: 20px;line-height: 50px;">
+              <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
               As a lot of our wet lab protocols involved working with toxic chemicals like triclocarban, 3,4-DCA and 4-CA, we were concerned about the safety of our team members as well as others working in the Project Lab. To check the suitability of our safety protocols, our Wet Lab members met Lynn Ferris, Lab Manager from UNSW, Australia. As our lab does not have an official committee to deal with safety and security in the lab, any changes would have to happen on a voluntary basis. 
               Lynn helped us realise the importance of communicating these risks to the people in the workplace and raising awareness about the same. 
               <br><br></p>
               <b><h4>Her suggestions involved:</h4></b>
               <ol>
-                <p style="font-family: 'Poppins', sans-serif; font-size: 20px;line-height: 50px;">
+                <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
               1.The use of a fume hood with carbon filter respirators while preparing stock solutions of TCC.<br>
               2.She approved our use of gloves and safety goggles while working with these chemicals, but also added that we use double gloves if we don't have the required glove thickness.<br> 
               3.She emphasised the importance of wiping all counters and workspaces with soap and water every evening.<br> 
@@ -124,7 +124,7 @@
               5.She also mentioned how important it was to defrost the -20 degrees fridge once in a while and also go through the contents and discard unwanted samples.<br><br>
             </ol>
               
-            <p style="font-family: 'Poppins', sans-serif; font-size: 20px;line-height: 50px;">Overall, this session with Lynn proved insightful and many of her suggestions have been incorporated by us. This meeting helped us better our lab safety and project-specific safety.
+            <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">Overall, this session with Lynn proved insightful and many of her suggestions have been incorporated by us. This meeting helped us better our lab safety and project-specific safety.
             </p>  
             </p>
               </p>
@@ -174,7 +174,7 @@
                    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The final segment of the session centred on the crucial processes of autoclaving and decontamination, emphasising their significance in maintaining lab hygiene and safety.</p>
                  </div>
                </div>
-               <p style="font-family: 'Poppins', sans-serif; font-size: 20px;line-height: 50px;">
+               <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
               The students expressed their gratitude for the informative and engaging sessions, and they enthusiastically embraced the opportunity to familiarise themselves with laboratory safety protocols and equipment. These sessions not only provided them with valuable knowledge but also served as an inspiring introduction to the exciting world of scientific research within our team.
               </p>
               </p>
